--- a/style.css
+++ b/style.css
@@ -83,9 +83,13 @@ html, body {
   line-height: 1.2;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
   .legend-control {
-    min-width: 140px;
-    max-width: 200px;
+    min-width: 130px;
+    max-width: 180px;
+    font-size: 13px;
+  }
+  .legend-control .legend-list .emoji {
+    font-size: 16px;
   }
 }
